@@ -10,7 +10,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Primary;
 import org.springframework.context.annotation.Profile;
 
-import java.util.Collections;
+import java.util.List;
 
 import static java.util.concurrent.TimeUnit.MINUTES;
 
@@ -21,16 +21,21 @@ import static java.util.concurrent.TimeUnit.MINUTES;
 @EnableCaching
 @Profile({"nais", "local"})
 public class CacheConfig {
+	public static final String GRAPHQL_QUERY_CACHE = "graphql_query_cache";
 	public static final String AZURE_CLIENT_CREDENTIAL_TOKEN_CACHE = "RESTSTS";
 
 	@Bean
 	@Primary
 	CacheManager cacheManager() {
 		SimpleCacheManager manager = new SimpleCacheManager();
-		manager.setCaches(Collections.singletonList(
+		manager.setCaches(List.of(
 				new CaffeineCache(AZURE_CLIENT_CREDENTIAL_TOKEN_CACHE, Caffeine.newBuilder()
 						.expireAfterWrite(50, MINUTES)
 						.maximumSize(1)
+						.build()),
+				new CaffeineCache(GRAPHQL_QUERY_CACHE, Caffeine.newBuilder()
+						.maximumSize(1_000)
+						.recordStats()
 						.build())
 		));
 		return manager;
